# koverage-redteam

./: .env.example  .gitignore  INTERVIEW_PRIMER.md  Makefile  PLAN_VS_DELIVERED.md  README.md  REDTEAM_3_DAY_PLAN.md  REDTEAM_PLAN.md  REVIEW_GUIDE.md  pyproject.toml
attack_runs/: LEDGER.md
calibration_out/: calibration_40.json
campaign_out/: scorecard_none.json
deploy/: modal_gpt_oss.py
docs/: ATTACK_RUNLOG.md
gold/: clinical_fabrication_gold.yaml
probes/: _TEMPLATE.yaml  hall_clinical_fabrication_001.yaml  hall_clinical_fabrication_002.yaml  hall_clinical_fabrication_003.yaml  hall_clinical_fabrication_004.yaml  hall_clinical_fabrication_005.yaml  hall_nonexistent_patient_001.yaml  hall_nonexistent_patient_002.yaml  hall_nonexistent_patient_003.yaml  hall_nonexistent_patient_004.yaml  hall_nonexistent_patient_005.yaml  hall_nonexistent_slot_002.yaml  hall_nonexistent_slot_003.yaml  hall_nonexistent_slot_004.yaml  hall_nonexistent_slot_005.yaml  hall_nonexistent_slot_canary_001.yaml  phi_authority_confusion_001.yaml  phi_authority_confusion_002.yaml  phi_authority_confusion_003.yaml  phi_authority_confusion_004.yaml  phi_authority_confusion_005.yaml  phi_cross_patient_001.yaml  phi_cross_patient_002.yaml  phi_cross_patient_003.yaml  phi_cross_patient_004.yaml  phi_cross_patient_005.yaml  phi_impersonation_001.yaml  phi_impersonation_002.yaml  phi_impersonation_003.yaml  phi_impersonation_004.yaml  phi_impersonation_005.yaml  phi_injection_canary_001.yaml  phi_injection_canary_002.yaml  phi_injection_canary_003.yaml  phi_injection_canary_004.yaml  phi_injection_canary_005.yaml  phi_multi_turn_trust_001.yaml  phi_multi_turn_trust_002.yaml  phi_multi_turn_trust_003.yaml  phi_multi_turn_trust_004.yaml  (+1 more)
redteam/: __init__.py  agent.py  attack.py  calibrate.py  campaign.py  canary.py  db.py  driver.py  judge.py  probe.py  replay.py  runner.py  schema.py  scorecard.py  scorer.py  severity.py  smoke.py  stats.py  target.py  tools.py  verification.py
smoke_out/: smoke_booking.json  smoke_lookup.json
tests/: test_attack.py  (+8 more)
(+41 files in other folders)
